# UniqueSounds

LexiconicalAnaylsis/: LexiconicalAnaylsis.cabal  README.md  UniqueSounds.cabal
LexiconicalAnaylsis/src/: Main.hs
